# ToDoIDE

./: .gitignore  CMakeLists.txt  README.md
ToDoIDE/: CMakeLists.txt  main.cpp
ToDoIDE/abstract_class/observer_pattern/: CMakeLists.txt
ToDoIDE/abstract_class/observer_pattern/observable/: CMakeLists.txt
ToDoIDE/abstract_class/observer_pattern/observer/include/: observerinterface.h
ToDoIDE/controller/include/: filecontroller.h
ToDoIDE/controller/src/: filecontroller.cpp
ToDoIDE/model/: CMakeLists.txt
ToDoIDE/model/include/: filemodel.h
ToDoIDE/model/src/: filemodel.cpp
ToDoIDE/view/include/: main_window.h
src/: CMakeLists.txt  main.cpp
src/abstract_class/observer_pattern/: CMakeLists.txt  observableinterface.cpp
src/abstract_class/observer_pattern/observable/src/: observableinterface.cpp
src/abstract_class/observer_pattern/observer/: CMakeLists.txt
src/class/model/: CMakeLists.txt  todoidemodel.cpp  todoidemodel.h
src/controller/: CMakeLists.txt
src/controller/include/: filecontroller.h  main_window_controller.h
src/controller/src/: filecontroller.cpp  main_window_controller.cpp
src/controller_interface/: controllerInterface.h
src/gui/: CMakeLists.txt  main_window.cpp  main_window.h
src/gui/component_interface/: CMakeLists.txt  component_interface.cpp  component_interface.h
src/model/: CMakeLists.txt
src/model/include/: filemodel.h  main_window_model.h
src/model/src/: filemodel.cpp  main_window_model.cpp
src/view/: CMakeLists.txt
src/view/include/: editoritem.h  main_window.h
src/view/src/: editoritem.cpp  main_window.cpp
(+3 files in other folders)
